--- a/web-app/src/app/header/header.component.html
+++ b/web-app/src/app/header/header.component.html
@@ -5,11 +5,12 @@
 
 		<span class="example-spacer"></span>
 
-		<form>
+		<!-- <form>
 			<mat-form-field class="keep-search-box">
 				<input matInput placeholder="Search using title">
 			</mat-form-field>
-		</form>
+		</form> -->
+		<app-search-note></app-search-note>
 
 		<span class="example-spacer"></span>
 
