--- a/web-app/src/app/header/header.component.css
+++ b/web-app/src/app/header/header.component.css
@@ -12,10 +12,10 @@
   flex: 1 1 auto;
 }
 
-.keep-header-toolbar {
+/* .keep-header-toolbar {
 	height: 70px;
 }
 
 .keep-header-content {
 	margin-top: 1em;
-}
+} */
