--- a/web-app/src/app/search-note/search-note.component.css
+++ b/web-app/src/app/search-note/search-note.component.css
@@ -1,6 +1,11 @@
-.keep-search-box {
-	margin-top : 1em;
-	width: 500px;
-	color: azure;
+.search-note-panel {
+	width: 55vw;
+	margin: auto;
+	margin-top: 1em;
+}
+
+.search-note-panel-wrapper {
+	display: flex;
+	flex-direction: column;
 	font-size: 15px;
 }
