--- a/web-app/src/app/search-note/search-note.component.html
+++ b/web-app/src/app/search-note/search-note.component.html
@@ -1,5 +1,6 @@
-<form>
-  <mat-form-field class="keep-search-box">
+<div class='search-note-panel'>
+  <mat-form-field class='search-note-panel-wrapper'>
     <input matInput placeholder="Search using title" [(ngModel)]='searchtext' (blur)='searchNote()'>
   </mat-form-field>
-</form>
+</div>
+  
