--- a/web-app/src/app/dashboard/dashboard.component.html
+++ b/web-app/src/app/dashboard/dashboard.component.html
@@ -15,3 +15,6 @@
 
 <!-- Following named router outlet displays the NoteSelectUserOpenerComponent based on the secondary route -->
 <router-outlet name="noteUserOutlet"></router-outlet>
+
+<!-- Show Notifications/Reminders -->
+<app-notification></app-notification>
