--- a/web-app/src/app/note/note.component.html
+++ b/web-app/src/app/note/note.component.html
@@ -10,8 +10,9 @@
   <mat-card-actions>
     <mat-checkbox class='keep-note-checkbox' color="primary" (click)='toggleSelection();showActions()'></mat-checkbox>
 
+    <button mat-stroked-button class='keep-note-actions' matTooltip="View Note" (click)='openNoteReminder()'>Reminder</button>
     <button mat-stroked-button class='keep-note-actions' matTooltip="View Note" (click)='openNoteEditView()'>Open</button>
-
+    
     <mat-icon *ngIf='note.isFavourite' class='keep-note-actions' color="warn" aria-label="Favourite" matTooltip="Favourite">favorite</mat-icon>
     <mat-icon *ngIf='!note.isFavourite' class='keep-note-actions' aria-label="Favourite" matTooltip="Favourite">favorite</mat-icon>
 
