notification/reminder updated

--- a/web-app/src/app/dashboard/dashboard.component.html
+++ b/web-app/src/app/dashboard/dashboard.component.html
@@ -16,5 +16,8 @@
 <!-- Following named router outlet displays the NoteSelectUserOpenerComponent based on the secondary route -->
 <router-outlet name="noteUserOutlet"></router-outlet>
 
-<!-- Show Notifications/Reminders -->
+<!-- Following named router outlet displays the ReminderOpenerComponent based on the secondary route -->
+<router-outlet name="noteReminderOutlet"></router-outlet>
+
+<!-- Show Notifications/Reminders - Last -->
 <app-notification></app-notification>
