share notes with reminder

--- a/web-app/src/app/dashboard/dashboard.component.html
+++ b/web-app/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
 <app-note-taker></app-note-taker>
 
 <!-- Actions on Notes -->
-<app-note-actions></app-note-actions>
+<!-- <app-note-actions></app-note-actions> -->
 
 <!-- Following router outlet displays the NoteViewComponent or ListViewComponent based on primary route -->
 <router-outlet></router-outlet>
