--- a/web-app/src/app/reminder-view/reminder-view.component.css
+++ b/web-app/src/app/reminder-view/reminder-view.component.css
@@ -1,23 +1,27 @@
-
-  .remind-notes-container {
-    width: 30vw;
-    margin: 20px auto;
-  }
-  
-  .note-remind-form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .btn-remind-note {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .error-message {
-    color: red;
-    padding: 1em 0 0 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+.remind-note-container{    
+  width: 50vw;
+  margin: auto;
+  padding-top: 10vh;
+}
+.remind-note-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.remind-note-wrapper > * {
+  width: 100%;
+}
+.error-message {
+  color: red;
+  padding: 1em 0 0 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.example-spacer {
+  flex: 1 1 auto;
+}
+.note-id {
+  color: burlywood;
+}
