--- a/web-app/src/app/note/note.component.html
+++ b/web-app/src/app/note/note.component.html
@@ -4,7 +4,7 @@
     {{note.title}}
 
     <mat-icon *ngIf='note.isFavourite' class='keep-note-actions' color="warn" aria-label="Favourite" matTooltip="Favourite">favorite</mat-icon>
-    <mat-icon *ngIf='!note.isFavourite' class='keep-note-actions' aria-label="Favourite" matTooltip="Favourite">favorite</mat-icon>
+    <!-- <mat-icon *ngIf='!note.isFavourite' class='keep-note-actions' aria-label="Favourite" matTooltip="Favourite">favorite</mat-icon> -->
 
   </mat-card-title>
   <mat-card-content class="keep-card-note-content">
@@ -14,10 +14,10 @@
   <mat-card-actions>
     <mat-checkbox class='keep-note-checkbox' color="primary" (click)='toggleSelection();showActions()'></mat-checkbox>
 
-    <button mat-stroked-button class='keep-note-actions' matTooltip="Add a reminder" (click)='openNoteReminder()'>Add Reminder</button>
-    <button mat-stroked-button class='keep-note-actions' matTooltip="Show all reminders" (click)='showAllNoteReminder()'>View Reminders</button>
-    <button mat-stroked-button class='keep-note-actions' matTooltip="View Note" (click)='openNoteEditView()'>Open Note</button>
-    
+    <mat-icon class='keep-note-actions' color="primary" aria-label="Share note" matTooltip="Share note" (click)='shareNote()'>share</mat-icon>
+    <mat-icon class='keep-note-actions' color="primary" aria-label="Delete reminder" matTooltip="Delete reminder" (click)='deleteNote()'>delete</mat-icon>
+    <mat-icon class='keep-note-actions' color="primary" aria-label="Add a reminder" matTooltip="Add a reminder" (click)='openNoteReminder()'>add_alarm</mat-icon>
+    <mat-icon class='keep-note-actions' color="primary" aria-label="View Note" matTooltip="View Note" (click)='openNoteEditView()'>open_in_new</mat-icon>
     
   </mat-card-actions>
 
