--- a/web-app/src/app/reminder-view/reminder-view.component.html
+++ b/web-app/src/app/reminder-view/reminder-view.component.html
@@ -71,4 +71,4 @@
 </div>
 
 <!-- Label to display any error messages -->
-<label class="error-message">{{ errorMsg }}</label>
+<!-- <label class="error-message">{{ errorMsg }}</label> -->
