--- a/web-app/src/app/note/note.component.html
+++ b/web-app/src/app/note/note.component.html
@@ -9,8 +9,7 @@
   </mat-card-title>
   <mat-card-content class="keep-card-note-content">
     <span class='note-head'>Text:</span> {{note.text}}
-  </mat-card-content>
-  <mat-card-content class="keep-card-note-content">
+    <mat-divider/>
     <span class='note-head'>State:</span> {{note.state}}
   </mat-card-content>
 
