--- a/web-app/src/app/note/note.component.html
+++ b/web-app/src/app/note/note.component.html
@@ -8,9 +8,9 @@
 
   </mat-card-title>
   <mat-card-content class="keep-card-note-content">
-    <span class='note-head'>Text:</span> {{note.text}}
-    <mat-divider/>
-    <span class='note-head'>State:</span> {{note.state}}
+    <span class='note-head'>Description:</span> {{note.text}}
+    <mat-divider></mat-divider>
+    <!-- <span class='note-head'>State:</span> {{note.state}} -->
   </mat-card-content>
 
   <mat-card-actions>
