--- a/web-app/src/app/list-view/list-view.component.html
+++ b/web-app/src/app/list-view/list-view.component.html
@@ -1,29 +1,14 @@
+<label class="keep-c-list-container" >Not-Started:</label>
 <div class="keep-c-list-container" *ngIf='notStartedNotes.length'>
-  <label>Not-Started:</label>
-
-  <!-- Populate notStartedNotes -->
-  <div class="keep-card-notes-list">
-    <app-note [note]='note' *ngFor="let note of notStartedNotes">
-    </app-note>
-  </div>
+  <app-note [note]='note' *ngFor="let note of notStartedNotes"></app-note>
 </div>
 
+<label class="keep-c-list-container padding30">Started:</label>
 <div class="keep-c-list-container" *ngIf='startedNotes.length'>
-  <label>Started:</label>
-
-  <!-- Populate startedNotes -->
-  <div class="keep-card-notes-list">
-    <app-note [note]='note' *ngFor="let note of startedNotes">
-    </app-note>
-  </div>
+  <app-note [note]='note' *ngFor="let note of startedNotes"></app-note>
 </div>
 
+<label class="keep-c-list-container padding30" >Completed:</label>
 <div class="keep-c-list-container" *ngIf='completedNotes.length'>
-  <label>Completed:</label>
-
-  <!-- Populate completedNotes -->
-  <div class="keep-card-notes-list">
-    <app-note [note]='note' *ngFor="let note of completedNotes">
-    </app-note>
-  </div>
+  <app-note [note]='note' *ngFor="let note of completedNotes"></app-note>
 </div>
