--- a/web-app/src/app/app.component.html
+++ b/web-app/src/app/app.component.html
@@ -1,5 +1,4 @@
-<app-login></app-login>
+<router-outlet></router-outlet>
 
 
-
-<!-- <router-outlet></router-outlet> -->
+<p-messages [showTransitionOptions]="'1ms'" [hideTransitionOptions]="'1ms'" [(value)]="msgs"></p-messages>
