Logout, Notification, Register

--- a/web-app/src/app/app.component.html
+++ b/web-app/src/app/app.component.html
@@ -1,4 +1,4 @@
 <router-outlet></router-outlet>
 
 
-<p-messages [showTransitionOptions]="'1ms'" [hideTransitionOptions]="'1ms'" [(value)]="msgs"></p-messages>
+<app-notification></app-notification>
