--- a/web-app/src/app/register/register.component.html
+++ b/web-app/src/app/register/register.component.html
@@ -1,58 +1,73 @@
-<p-card class="keep-register" header="Registration Form" styleClass="ui-card-shadow">
+<p-card class="keep-register" header="Registration Form" styleClass="ui-card-shadow" [style]="{width: '50vw'}">
     <form [formGroup]="registerForm" (ngSubmit)="register()">
         <div class="ui-g ui-fluid">
 
 
-            <div class="ui-g-12 ui-md-12 ui-lg-12">
+            <div class="ui-sm-2 ui-md-6 ui-lg-12 ui-xl-12">
                 <div class="ui-inputgroup">
                     <span class="ui-inputgroup-addon ui-float-label"><i class="pi pi-user"></i></span>
-                    <input type="text" pInputText formControlName="name" (blur)="showError('name')" placeholder="Name*">
-
-                    <span class="ui-inputgroup-addon ui-float-label"><i class="pi pi-envelope"></i></span>
-                    <input type="text" pInputText formControlName="email" (blur)="showError('email')" placeholder="Email*">
+                    <input type="text" pInputText formControlName="name" placeholder="Name*" [ngClass]="{ 'is-invalid': f.name.errors }">
                 </div>
             </div>
 
-            <div class="ui-g-12 ui-md-12 ui-lg-12">
+            <div class="ui-sm-2 ui-md-6 ui-lg-12 ui-xl-12">
+                <div class="ui-inputgroup">
+                    <span class="ui-inputgroup-addon ui-float-label"><i class="pi pi-envelope"></i></span>
+                    <input type="text" pInputText formControlName="email" placeholder="Email*">
+
+                </div>
+            </div>
+
+            <div class="ui-sm-2 ui-md-6 ui-lg-12 ui-xl-12">
                 <div class="ui-inputgroup">
                     <span class="ui-inputgroup-addon ui-float-label"><i class="pi pi-calendar"></i></span>
                     <input type="text" pInputText formControlName="dob" placeholder="Date of Birth*">
+                </div>
+            </div>
 
+            <div class="ui-sm-2 ui-md-6 ui-lg-12 ui-xl-12">
+                <div class="ui-inputgroup">
                     <span class="ui-inputgroup-addon ui-float-label"><i class="pi pi-caret-down"></i></span>
                     <input type="text" pInputText formControlName="role" placeholder="Role">
                 </div>
             </div>
 
-            <div class="ui-g-12 ui-md-12 ui-lg-12">
+            <div class="ui-sm-2 ui-md-6 ui-lg-12 ui-xl-12">
                 <div class="ui-inputgroup">
                     <span class="ui-inputgroup-addon ui-float-label"><i class="fa fa-user"></i></span>
                     <input type="text" pInputText formControlName="username" placeholder="Username*">
                 </div>
             </div>
 
-            <div class="ui-g-12 ui-md-12 ui-lg-12">
+            <div class="ui-sm-2 ui-md-6 ui-lg-12 ui-xl-12">
                 <div class="ui-inputgroup">
                     <span class="ui-inputgroup-addon"><i class="fa fa-lock"></i></span>
                     <input type="password" pPassword formControlName="password" placeholder="Password*">
+                </div>
+            </div>
 
+            <div class="ui-sm-2 ui-md-6 ui-lg-12 ui-xl-12">
+                <div class="ui-inputgroup">
                     <span class="ui-inputgroup-addon"><i class="fa fa-lock"></i></span>
                     <input type="password" pPassword formControlName="passwordConfirm" placeholder="Confirm Password*">
                 </div>
             </div>
 
+        </div>
 
-            <p-footer>
-                <div class="ui-g-6 ui-md-6 ui-lg-6">
-                    <div class="ui-inputgroup">
-                        <button pButton type="submit" label="Register" [disabled]="!registerForm.valid" class="ui-button-rounded ui-button-success"></button>
-                    </div>
+        <div class="ui-g ui-fluid">
+
+            <div class="ui-g-12">
+                <div class="ui-inputgroup">
+                    <button pButton type="submit" label="Register" [disabled]="!registerForm.valid" class="ui-button-rounded ui-button-success"></button>
                 </div>
-                <div class="ui-g-6 ui-md-6 ui-lg-6">
-                    <div class="ui-inputgroup">
-                        <button pButton type="button" label="Cancel" (click)='clear()' class="ui-button-rounded ui-button-error"></button>
-                    </div>
+            </div>
+            <div class="ui-g-12">
+                <div class="ui-inputgroup">
+                    <button pButton type="button" label="Cancel" (click)='clear()' class="ui-button-rounded ui-button-error"></button>
                 </div>
-            </p-footer>
+            </div>
+
 
         </div>
     </form>
