--- a/web-app/src/app/register/register.component.html
+++ b/web-app/src/app/register/register.component.html
@@ -1,20 +1,29 @@
 <p-card class="keep-register" header="Registration Form" styleClass="ui-card-shadow" [style]="{width: '50vw'}">
+    
+    <div class="ui-g ui-fluid">
+        <div class="ui-g-12 error-message" *ngIf="formValidation.email.isError">
+            {{formValidation.email.message}}
+        </div>
+
+        <div class="ui-g-12 error-message" *ngIf="formValidation.password.isError">
+            {{formValidation.password.message}}
+        </div>
+    </div>
+    
     <form [formGroup]="registerForm" (ngSubmit)="register()">
         <div class="ui-g ui-fluid">
-
-
             <div class="ui-sm-2 ui-md-6 ui-lg-12 ui-xl-12">
                 <div class="ui-inputgroup">
                     <span class="ui-inputgroup-addon ui-float-label"><i class="pi pi-user"></i></span>
-                    <input type="text" pInputText formControlName="name" placeholder="Name*" [ngClass]="{ 'is-invalid': f.name.errors }">
+                    <input type="text" pInputText formControlName="name" placeholder="Name*">
+                    
                 </div>
             </div>
 
             <div class="ui-sm-2 ui-md-6 ui-lg-12 ui-xl-12">
                 <div class="ui-inputgroup">
                     <span class="ui-inputgroup-addon ui-float-label"><i class="pi pi-envelope"></i></span>
-                    <input type="text" pInputText formControlName="email" placeholder="Email*">
-
+                    <input type="text" pInputText formControlName="email" placeholder="Email*" [email]="true">
                 </div>
             </div>
 
@@ -28,16 +37,20 @@
             <div class="ui-sm-2 ui-md-6 ui-lg-12 ui-xl-12">
                 <div class="ui-inputgroup">
                     <span class="ui-inputgroup-addon ui-float-label"><i class="pi pi-caret-down"></i></span>
-                    <input type="text" pInputText formControlName="role" placeholder="Role">
+                    <p-dropdown [options]="roles" formControlName="role" placeholder="Select Role" optionLabel="name" [showClear]="true" filter="true"></p-dropdown>
                 </div>
             </div>
 
-            <div class="ui-sm-2 ui-md-6 ui-lg-12 ui-xl-12">
+            <div class="ui-sm-2 ui-md-12 ui-lg-12 ui-xl-12">
                 <div class="ui-inputgroup">
                     <span class="ui-inputgroup-addon ui-float-label"><i class="fa fa-user"></i></span>
                     <input type="text" pInputText formControlName="username" placeholder="Username*">
                 </div>
             </div>
+
+        </div>
+
+        <div class="ui-g ui-fluid">
 
             <div class="ui-sm-2 ui-md-6 ui-lg-12 ui-xl-12">
                 <div class="ui-inputgroup">
@@ -56,19 +69,14 @@
         </div>
 
         <div class="ui-g ui-fluid">
-
             <div class="ui-g-12">
-                <div class="ui-inputgroup">
-                    <button pButton type="submit" label="Register" [disabled]="!registerForm.valid" class="ui-button-rounded ui-button-success"></button>
-                </div>
+                <button pButton type="submit" label="Register" [disabled]="!registerForm.valid"
+                    class="ui-button-rounded ui-button-success"></button>
             </div>
             <div class="ui-g-12">
-                <div class="ui-inputgroup">
-                    <button pButton type="button" label="Cancel" (click)='clear()' class="ui-button-rounded ui-button-error"></button>
-                </div>
+                <button pButton type="button" label="Cancel" (click)='clear()'
+                    class="ui-button-rounded ui-button-error"></button>
             </div>
-
-
         </div>
     </form>
 </p-card>
