--- a/web-app/src/app/register/register.component.html
+++ b/web-app/src/app/register/register.component.html
@@ -1,22 +1,18 @@
 <p-card class="keep-register" header="Registration Form" styleClass="ui-card-shadow" [style]="{width: '50vw'}">
-    
-    <div class="ui-g ui-fluid">
-        <div class="ui-g-12 error-message" *ngIf="formValidation.email.isError">
-            {{formValidation.email.message}}
-        </div>
 
-        <div class="ui-g-12 error-message" *ngIf="formValidation.password.isError">
-            {{formValidation.password.message}}
+    <div class="ui-g ui-fluid error-section">
+        <div class="ui-g-12 error-message" *ngFor="let error of formValidation">
+            {{error}}
         </div>
     </div>
-    
+
     <form [formGroup]="registerForm" (ngSubmit)="register()">
         <div class="ui-g ui-fluid">
             <div class="ui-sm-2 ui-md-6 ui-lg-12 ui-xl-12">
                 <div class="ui-inputgroup">
                     <span class="ui-inputgroup-addon ui-float-label"><i class="pi pi-user"></i></span>
                     <input type="text" pInputText formControlName="name" placeholder="Name*">
-                    
+
                 </div>
             </div>
 
@@ -37,7 +33,8 @@
             <div class="ui-sm-2 ui-md-6 ui-lg-12 ui-xl-12">
                 <div class="ui-inputgroup">
                     <span class="ui-inputgroup-addon ui-float-label"><i class="pi pi-caret-down"></i></span>
-                    <p-dropdown [options]="roles" formControlName="role" placeholder="Select Role" optionLabel="name" [showClear]="true" filter="true"></p-dropdown>
+                    <p-dropdown [options]="roles" formControlName="role" placeholder="Select Role" optionLabel="name"
+                        [showClear]="true" filter="true"></p-dropdown>
                 </div>
             </div>
 
@@ -74,7 +71,7 @@
                     class="ui-button-rounded ui-button-success"></button>
             </div>
             <div class="ui-g-12">
-                <button pButton type="button" label="Cancel" (click)='clear()'
+                <button pButton type="button" label="Back to Login" (click)='goToLogin()'
                     class="ui-button-rounded ui-button-error"></button>
             </div>
         </div>
